syntax = "proto3";
package job;
option go_package = "./jobservice";

service JobService {
    rpc GetJobs(GetJobsRequest) returns (GetJobsResponse) {}
}

message GetJobsRequest {
    string search_term = 1;
    int32 from = 2;
    int32 size = 3;
  }

  message GetJobsResponse {
    repeated Job jobs = 1;
    int32 total = 2;
  }

  message Job {
    string Title = 1 [json_name="title"];
    string URL = 2 [json_name="URL"];
    string Source = 3 [json_name="source"];
    string Description = 4 [json_name="description"];
    string Location = 5 [json_name="location"];
    string CompanyName = 6 [json_name="companyName"];
  }